# PersonalWeb

./: .gitignore  Cargo.toml  ideas.todo  index.html
backend/: backend.cabal  package.yaml  stack.yaml
backend/.stack-work/: stack.sqlite3
backend/.stack-work/ghci/75f8e995/: cabal_macros.h
backend/.stack-work/ghci/beebd416/: cabal_macros.h
backend/.stack-work/ghci/bf056092/: cabal_macros.h
backend/.stack-work/ghci/ca9a4404/: cabal_macros.h
backend/.stack-work/install/38482417/lib/x86_64-windows-ghc-8.10.7/backend-0.1.0.0-8VHz4s2VuNZLHdCTCHpxrj/: LearnTH.hi  Lib.hi  Paths_backend.hi
backend/.stack-work/install/38482417/lib/x86_64-windows-ghc-8.10.7/backend-0.1.0.0-D3u2upmYGczHH8kmWQ7HrH/: Lib.hi  Paths_backend.hi
backend/.stack-work/install/38482417/lib/x86_64-windows-ghc-8.10.7/backend-0.1.0.0-ECgNVj15EkgAf6HDFeZXLo/: Lib.hi  Paths_backend.hi
backend/.stack-work/install/38482417/pkgdb/: backend-0.1.0.0-D3u2upmYGczHH8kmWQ7HrH.conf  package.cache
backend/src/: LearnTH.hs  Lib.hs
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: Fetch.tsx
src/: main.rs
src/component/: app.rs  inside.rs  mod.rs  root.rs
src/context/: mod.rs  theme.rs  theme_context.rs  theme_kind.rs  theme_provider.rs
