[package]
name = "personal_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
stylist = { version = "0.12.1", features = ["yew"] }
yew = { version = "0.20.0", features = ["csr"] }
